--- a/2020_0302/self-intro.html
+++ b/2020_0302/self-intro.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
     <head>
         <meta charset="utf-8">
-        <title></title>
+        <title>profile_page</title>
     </head>
     <body>
         <!--
@@ -16,7 +16,7 @@
             ・SNSへのリンク集
             ・好きな動画
             -->
-        <img src="https://1.bp.blogspot.com/-rd13c_PYCHc/XexqupELsMI/AAAAAAABWiY/xPZ4z_kh9Wo5plD3VNp1PqRe66RbBX1IgCNcBGAsYHQ/s400/kotowaza_neko_koban.png" alt="ねこ（あとでアイコンに帰る）">
+        <img src="image/icon.jpg" alt="アイコン画像">
         <h1>aki_hanari</h1>
         <h3>profile</h3>
         <table>
@@ -31,15 +31,16 @@
         </table>
         <h3>likes</h3>
         <ul>
-            <li>a</li>
-            <li>b</li>
-            <li>c</li>
+            <li>C</li>
+            <li>Python</li>
+            <li>Java</li>
         </ul>
         <h3>link</h3>
         <ul>
-            <li>d</li>
-            <li>e</li>
-            <li>f</li>
+            <li><a href="https://twitter.com/akihanari">Twitter</a></li>
+            <li><a href="https://note.com/akihanari">blog</a></li>
+            <li><a href="https://github.com/akihanari">GitHub</a></li>
+            <li><a href="https://qiita.com/akihanari">Qiita</a></li>
         </ul>
 
 
